--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="action">
-      <button type="submit">Shorten URL</button>
+      <button type="submit" name="submit_button" value="submit_url">Shorten URL</button>
     </div>
   </form>
 </div>
@@ -37,8 +37,8 @@
       </div>
     </div>
     <div class="action">
-      <button>Encrypt</button>
-      <button>Decrypt</button>
+      <button type="submit" name="submit_button" value="submit_encrypt">Encrypt</button>
+      <button type="submit" name="submit_button" value="submit_decrypt">Decrypt</button>
     </div>
   </form>
 </div>
