revised: color encoding

--- a/templates/video.html
+++ b/templates/video.html
@@ -5,7 +5,9 @@
     <title>video</title>
 </head>
 <body>
-<h1>https://www.youtube.com/embed/{{ latest_url }}</h1>
-<embed src="https://www.youtube.com/embed/{{latest_url}}" width="853" height="480" frameborder="0" allowfullscreen>
+<h1 align="center">https://www.youtube.com/embed/{{ latest_url }}</h1>
+<center>
+<embed src="https://www.youtube.com/embed/{{latest_url}}" width="1279.5" height="624" frameborder="0" allowfullscreen>
+</center>
 </body>
 </html>
