--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,14 +6,15 @@
 }
 
 body {
-  background: #e35869;
+  background: linear-gradient(45deg, #4158d0, #c850c0);
+  /*background: #e35869; */
   font-family: 'Rubik', sans-serif;
 }
 
 .login-form {
   background: #fff;
   width: 500px;
-  margin: 65px auto;
+  margin: 50px auto;
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
